[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "ykk-puyaisp"
version      = "1.4.5"
description  = "Programming Tool for PUYA PY32F0xx Microcontrollers"
keywords     = ["ISP", "PUYA", "PY32F002A", "PY32F003", "PY32F030", "microcontroller"]
dependencies = ["pyserial"]
requires-python = ">=3.8"
authors = [
    { name="TheYkk", email="theykk@users.noreply.github.com" },
]
maintainers = [
    { name="TheYkk", email="theykk@users.noreply.github.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
ykk-puyaisp = "ykk_puyaisp.ykk_puyaisp:_main"

[project.urls]
Homepage   = "https://github.com/TheYkk"
Repository = "https://github.com/TheYkk/puyaisp"
Issues     = "https://github.com/TheYkk/puyaisp/issues"
